--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2007,7 +2007,7 @@ tbody td{
 }
 
 #company-select .sirius-select-container {
-    width: 240px;
+    width: 260px;
 }
 
 #company-select-mobile .sirius-select-text{
@@ -2827,21 +2827,26 @@ tbody td{
     }
 }
 
-.company-navbar + .sirius-select-container, .company-navbar + .sirius-select-text{
+#company-select, #company-select-mobile{
+    font-family: 'Inter' !important;
+}
+.company-navbar + .sirius-select-text{
     border: 1px white solid;
     background-position-x: 92.5%;
     padding-right: 50px;
     background-color: #f4f4f4;
+    color:#15034C;
+    font-weight: 600;
+    font-size: 16px;
 }
 .company-navbar + .active {
     border: 1px solid #88BFFF;
 }
-.company-navbar + .sirius-select-text{
+/* .company-navbar + .sirius-select-text{
     color:#15034C;
-    font-family: 'Inter';
     font-weight: 600;
     font-size: 16px;
-}
+} */
 
 .cloudfox-logo-desktop{
     display: flex;
