adjusted menu to open at same speed as cloudfox logo

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2881,6 +2881,9 @@ tbody td{
     #top-vertical-bar{
         display: none;
     }
+    .hamburger-desk{
+        display: none;
+    }
 }
 
 @-webkit-keyframes fade-in {
