--- a/resources/modules/global/css/loading.css
+++ b/resources/modules/global/css/loading.css
@@ -148,7 +148,6 @@
     min-height: 110px;
     top: 0px;
     left: 0px;
-    background-colour: #FFFFFF08;
 }
 .foxLoaderTable {
     width: auto;
@@ -165,7 +164,7 @@
     100% { transform: rotate(360deg); }
 }
 
-.loader-any-container{
+.loader-any-container, .loader-any-container-page{
     width: 100%;
     height: 100%;
     min-height: 250px;
@@ -183,7 +182,7 @@
     justify-content: center;
 }
 
-.loader-any{
+.loader-any, .loader-any-page{
     width: 75px;
     height: 75px;
     margin: 0;
@@ -240,7 +239,7 @@
     text-align: center;
     -webkit-animation: 2.1s infinite linear;
     animation: 2.1s infinite linear;
-    animation-delay: 0.5s; 
+    animation-delay: 0.5s;
 }
 
 .sirius-loading img {
