fix display convite para começar mobile em desktop

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2242,6 +2242,7 @@ tbody td{
 }
 
 .new-register-page-open-modal-container {
+    display: none;
     margin-left: 65px;
     transition: all .25s;
 }
