fixed editor issue

--- a/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
+++ b/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
@@ -190,6 +190,10 @@
     align-items: center;
 }
 
+.preview-logo {
+    padding: 4px;
+}
+
 .preview-logo.desktop {
     border-radius: 4px;
     max-height: 41px;
