fixed logo icon position in editor

--- a/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
+++ b/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
@@ -836,7 +836,13 @@
     }
 
     .logo-desktop-div.desktop {
-        padding: 0px 0 0 110px !important;
+        padding: 0px 0 0 117px !important;
+    }
+
+    .logo-desktop-div.has-retangle-banner {
+        height: 50px;
+        margin-top: -20px;
+        padding: 0px 70px 0 130px !important
     }
 
     .logo-desktop-div .logo-desktop {
