--- a/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
+++ b/Modules/CheckoutEditor/Resources/assets/css/preview-styles.css
@@ -161,7 +161,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 10px;
     /* height: 50px; */
     padding: 10px 70px 0 70px;
     -webkit-transition: all 0.1s;
@@ -179,7 +179,7 @@
 
 .logo-desktop-div .logo-desktop {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
@@ -192,7 +192,6 @@
     max-height: 41px;
     max-width: 90px;
     object-fit: contain;
-    background-color: #fff;
 }
 
 .logo-desktop-div.has-retangle-banner {
@@ -236,6 +235,11 @@
 
 .logo-menu-bar.has-banner {
     margin-top: -8px;
+}
+
+.logo-desktop.has-banner
+.preview-logo.desktop {
+    background-color: #ffff;
 }
 
 .purchase-menu-mobile {
@@ -849,8 +853,8 @@
     }
 
     .preview-logo.desktop {
-        max-width: 30px;
-        max-height: 30px;
+
+        max-height: 25px;
     }
 
     #preview-desktop-visual {
