fiz select company navbar padding

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2871,6 +2871,7 @@ tbody td{
     border: 1px white solid;
     background-position-x: 92.5%;
     padding-right: 50px;
+    padding-top: 12px;
     background-color: #f4f4f4;
     color:#15034C;
     font-weight: 600;
