--- a/resources/modules/global/css/table.css
+++ b/resources/modules/global/css/table.css
@@ -1,19 +1,29 @@
-.table thead > tr > td, .table thead > tr > th {
-    background-color: #FEFEFE;
-    padding: 34px 10px !important;
-    color: #15034C !important;
-    font-size: 16px !important;
-}
-
 thead {
     border-bottom: 1px solid #EDEDED;
 }
 
-.table tbody > tr > td {
+.table thead > tr > td, .table thead > tr > th {
+    background-color: #FAFAFA;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
     font-size: 16px;
-    line-height: 20px;
-    color: #5D5D5D;
-    padding: 25px 10px;
+    color: #15034C;
+}
+
+.table thead > tr > td:first-child {
+    padding: 22px 18px 22px 32px;
+}
+
+.table tbody > tr > td:first-child{
+    padding-left: 32px;
+}
+
+.table tbody > tr > td {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .table-striped > tbody > tr:nth-child(even) > td, .table-striped > tbody > tr:nth-child(even) > th {
