--- a/Modules/Projects/Resources/assets/css/style.css
+++ b/Modules/Projects/Resources/assets/css/style.css
@@ -480,3 +480,23 @@
 .page-title > a > span {
     color: #707070;
 }
+
+.table tbody > tr > td {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.table thead > tr > td, .table thead > tr > th {
+    background-color: #FAFAFA;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #15034C;
+}
+
+.table thead > tr > td:first-child {
+    padding: 22px 18px 22px 32px;
+}
