--- a/resources/modules/global/css/table.css
+++ b/resources/modules/global/css/table.css
@@ -52,3 +52,9 @@ thead {
 .badge {
     padding: 8px 20px;
 }
+
+.pagination-style{
+    padding: 8px;
+    border-radius: 4px;
+    background-color: #ffffff;
+}
