--- a/Modules/Finances/Resources/assets/css/multi-finances.css
+++ b/Modules/Finances/Resources/assets/css/multi-finances.css
@@ -364,6 +364,13 @@ body {
 .btn-outline-success:hover {
     background: #1BE4A8;
 }
+
+.btn-request-withdrawal.disabled {
+    color: #636363;
+    border: 1px solid #636363;
+    pointer-events: none;
+}
+
 .o-angle-down-1 {
     color: #636363;
     font-size: 30px;
