adjusts on alert pendings and alert demo

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2233,6 +2233,7 @@ tbody td{
     border-radius: 6px;
     padding: 12px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .new-register-open-modal-btn {
@@ -2241,13 +2242,16 @@ tbody td{
     font-weight: 600;
 }
 
-.alert-demo-account .new-register-open-modal{
+.alert-demo-account .row{
     background-color: #2E85EC;
     color: white;
     border-radius:0;
     text-align:center;
     width:100%;
-    display:block
+    display:block;
+    gap: 10px;
+    padding: 12px;
+    font-weight: 500;
 }
 
 .alert-pendings{
@@ -2255,6 +2259,7 @@ tbody td{
     border:1px #E7EAEE solid;
     border-radius:6px;
     padding: 2px;
+    font-family: 'Inter';
 }
 
 .alert-pendings-box-1{
@@ -2923,7 +2928,7 @@ tbody td{
     background-color: #fff;
 }
 .new-register-navbar-open-modal-container{
-    display:block
+    display:none
 }
 @media (max-width: 768px) {
     .new-register-navbar-open-modal-container{
