--- a/Modules/Dashboard/Resources/assets/css/skeleton-loading.css
+++ b/Modules/Dashboard/Resources/assets/css/skeleton-loading.css
@@ -30,6 +30,12 @@
     margin: 40px 0 0 40px;
 }
 
+.chart-card .loading-content-inside {
+    height: 20px;
+    width: 80%;
+    margin: 20px 0 0 40px;
+}
+
 .performance-loading .title {
     margin: 15px 0 0 20px;
     height: 17px;
