--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2261,6 +2261,7 @@ tbody td{
     border-radius:6px;
     padding: 2px;
     font-family: 'Inter';
+    display:none;
 }
 
 .alert-pendings-box-1{
