--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2285,9 +2285,21 @@ tbody td{
     margin-left: 65px;
     transition: all .25s;
 }
+.new-register-page-open-modal-container .row .new-register-open-modal-btn .alert-pendings-box-1 img {
+    margin: 0 10px 4px
+}
 @media screen and (max-width: 767px) {
+    .new-register-page-open-modal-container .row .new-register-open-modal-btn .alert-pendings-box-1 img {
+        margin: 0 4px 4px
+    }
     .new-register-page-open-modal-container {
         margin-left: 0;
+    }
+    .alert-demo-account .row img:first-child{
+        margin-right: 10px !important;
+    }
+    .alert-demo-account .row img:nth-child(2){
+        margin-left: 10px !important;
     }
 }
 
