--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2290,11 +2290,11 @@ tbody td{
 }
 @media screen and (max-width: 767px) {
     .new-register-page-open-modal-container .row .new-register-open-modal-btn .alert-pendings-box-1 img {
-        margin: 0 2px 4px
+        margin: 0 0 4px
     }
 
     .new-register-page-open-modal-container .row .new-register-open-modal-btn .alert-pendings-box-1{
-        padding-right: 2px;
+        padding-right: 0;
     }
 
     .new-register-page-open-modal-container {
