--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2253,6 +2253,82 @@ tbody td{
     gap: 10px;
     padding: 12px;
     font-weight: 500;
+    cursor:pointer;
+}
+
+.alert-demo-account-overlay{
+    background: #f1f4f5;
+    position: fixed;
+    display: none;
+    top: 4.286rem;
+    left: 65px;
+    right: 0;
+    bottom: 0;
+    z-index: 1100;
+    padding: 40px 48px 48px;
+    margin-bottom: 0;
+    overflow-y: auto;
+}
+
+.alert-demo-account-overlay-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 450px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 40px;
+    text-align: center;
+}
+
+.alert-demo-account-close-modal-x{
+    text-align: right;
+    font-weight:bold;
+    cursor:pointer;
+}
+
+.alert-demo-account-overlay-title{
+    text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 20px;
+    color: #3D4456;
+}
+
+.alert-demo-account-overlay-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    width: 64px;
+    height: 64px;
+    background: rgba(89, 191, 117, 0.05);
+    border-radius: 30px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.alert-demo-account-overlay-body{
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.alert-demo-account-close-modal{
+    background: #F4F6FB;
+    border-radius: 4px;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
 .alert-pendings{
@@ -2360,6 +2436,15 @@ tbody td{
     }
 
     .new-register-overlay-container {
+        width: 90%;
+        padding: 0px 16px;
+    }
+
+    .alert-demo-account-overlay {
+        left: 0;
+    }
+
+    .alert-demo-account-overlay-container {
         width: 90%;
         padding: 0px 16px;
     }
