--- a/Modules/Projects/Resources/assets/css/index.css
+++ b/Modules/Projects/Resources/assets/css/index.css
@@ -46,3 +46,13 @@
 #data-table-projects {
     scrollbar-width: none;
 }
+
+.card-loading-img-top {
+    border-radius: 8px 8px 0 0;
+    height: 270px;
+    width: 70%;
+}
+
+.card-loading-body {
+    padding: 0px 20px;
+}
