--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -3423,6 +3423,20 @@ tbody td {
     }
 }
 
+.skeleton-loading {
+    border-radius: 5px;
+    animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: hsl(0, 0%, 90%);
+    }
+    100% {
+        background-color: hsl(0, 0%, 96%);
+    }
+}
+
 .skeleton {
     opacity: 0.7;
     /* linear-gradient(#000 0 0) top/100% 70%,
