--- a/Modules/Finances/Resources/assets/css/new-finances.css
+++ b/Modules/Finances/Resources/assets/css/new-finances.css
@@ -888,11 +888,11 @@ select,
 }
 
 #withdrawalsTable tr:last-of-type td:first-child {
-    border-bottom-left-radius: 16px !important;
+    border-top-left-radius: 16px !important;
 }
 
 #withdrawalsTable tr:last-of-type td:last-child {
-    border-bottom-right-radius: 16px !important;
+    border-top-right-radius: 16px !important;
 }
 
 .popover {
