working in space footer

--- a/Modules/Projects/Resources/assets/css/style.css
+++ b/Modules/Projects/Resources/assets/css/style.css
@@ -515,3 +515,9 @@
     background-color: #EBEBEB;
     color: #999999;
 }
+
+#divCustomDomain > table thead > tr > td,
+#divCustomDomain thead > tr > th {
+    border-top: none !important;
+    padding: 25px 16px;
+}
