feat: add new card skeleton loading to stores, products and app pages

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -3437,6 +3437,11 @@ tbody td {
     }
 }
 
+.card-skeleton-loading-img-top {
+    height: 270px;
+    width: 100%;
+}
+
 .skeleton {
     opacity: 0.7;
     /* linear-gradient(#000 0 0) top/100% 70%,
