--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -549,7 +549,7 @@ a.label {
 }
 
 .card {
-    font-family: "Muli", sans-serif;
+    font-family: "Inter", sans-serif;
     border-radius: 16px;
 }
 
@@ -687,7 +687,7 @@ a.label {
 .s-btn {
     background-color: #ffffff;
     border: 2px solid #2626264d;
-    font: normal normal bold 24px/30px Muli;
+    font: normal normal bold 24px/30px "Inter";
     padding: 15px 40px;
     color: #8a8a8a;
 }
@@ -1750,7 +1750,7 @@ input[type="radio"] {
 }
 .page-project .table .table-title {
     color: #15034c !important;
-    font: 16px "Muli" !important;
+    font: 16px "Inter" !important;
 }
 
 .top-holder .input-group .form-control {
@@ -3523,7 +3523,6 @@ tbody td {
     text-decoration: underline;
     color: #856404 !important;
 }
-
 
 .alert-danger {
     background: #f8d7da;
