--- a/Modules/SalesRecovery/Resources/assets/css/index.css
+++ b/Modules/SalesRecovery/Resources/assets/css/index.css
@@ -1,3 +1,16 @@
 .badge.badge-danger{
     background-color: #E81414 !important;
 }
+
+@media (min-width: 768px) {
+    .table td:nth-child(2) {
+        max-width: 108px;
+    }
+}
+
+.table td:nth-child(3) {
+    max-width: 108px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
